--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <div id="app"></div>
 
   <script>
+
+    const routes = {
+      "/": "/pages/home.html",
+      "/about": "/pages/about.html",
+      "/contact": "/pages/contact.html",
+      404: "/pages/404.html",
+    }
+    
     function route(event) {
       event = event || window.event
       event.preventDefault() /*faz com que perca o padrão, 
